Work on qunit testing

--- a/JAR3Doutput/JAR3Dresults/static/js/input.html
+++ b/JAR3Doutput/JAR3Dresults/static/js/input.html
@@ -3,16 +3,15 @@
   <meta charset="utf-8" />
   <title>QUnit Example</title>
   <link rel="stylesheet" href="qunit.css" />
+
 </head>
 <body>
   <div id="qunit"></div>
   <script src="qunit.js"></script>
-  <script src="tests.js"></script>
   <script src="jar3dInputValidator.js"></script>
+  <script src="tests.js"></script>
 </body>
 
 
-<textarea></textarea>
-
-
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 </html>
